@startuml

title __ENTITY's Class Diagram__\n

  package by.training.task2.entity {
    class Cashier {
        - ID : int
        - customersQueue : Queue<Customer>
        + Cashier()
        + getCustomerFromRestaurant()
        + getCustomersQueue()
        + call()
        - prepareFood()
        + toString()
    }
  }
  

  package by.training.task2.entity {
    class Configuration {
        {static} - FILE_PATH : String
        {static} - LIST_IDX_AMOUNTOFCASHIERS : int
        {static} - LIST_IDX_AMOUNTOFCUSTOMERS : int
        {static} - LIST_IDX_FROMRANGE : int
        {static} - LIST_IDX_TORANGE : int
        - amountOfCashiers : int
        - amountOfCustomers : int
        - fromRange : int
        - toRange : int
        + Configuration()
        + getAmountOfCashiers()
        + setAmountOfCashiers()
        + getAmountOfCustomers()
        + setAmountOfCustomers()
        + getFromRange()
        + setFromRange()
        + getToRange()
        + setToRange()
        + equals()
        + hashCode()
        + toString()
    }
  }
  

  package by.training.task2.entity {
    class Customer {
        - ID : int
        - timeMilli : int
        + Customer()
        + getID()
        + setID()
        + getTimeMilli()
        + setTimeMilli()
        + equals()
        + hashCode()
        + toString()
    }
  }
  

  package by.training.task2.entity {
    class Restaurant {
        {static} - lock : ReentrantLock
        {static} - INSTANCE : Restaurant
        - listOfUnOrderedCustomers : List<Customer>
        - listOfCashiers : List<Cashier>
        - listOfOrderedCustomers : List<Customer>
        - totalUnServedCustomersCounter : int
        - Restaurant()
        {static} + getInstance()
        + getListOfCashiers()
        + getListOfOrderedCustomers()
        + getTotalUnServedCustomersCounter()
        + getOrderedCustomer()
        + getUnorderedCustomer()
        + addOrderedCustomer()
        + assignCustomers()
    }
  }
  

  Cashier -up-|> Callable
  Restaurant o-- Configuration : configuration


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
